PeerGroupTest: remove BLOCKING_CLIENT_MANAGER from parameters()
PeerGroupTest is a parameterized test class that runs twice:
once for BLOCKING_CLIENT_MANAGER and once for NIO_CLIENT_MANAGER.
It fails intermittently. This experimental PR is a test to see
if by removing BLOCKING_CLIENT_MANAGER we so no (or fewer failures)